--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
-# Compiled class file
-*.class
+# Created by .ignore support plugin (hsz.mobi)
+.gitignore
 
-# Log file
-*.log
+# Operating System Files
 
-# BlueJ files
-*.ctxt
+*.DS_Store
+Thumbs.db
+*.sw?
+.#*
+*#
+*~
+*.sublime-*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Build Artifacts
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+.gradle/
+kulachat-common/build/
+kulachat-core/build/
+kulachat-ims/build/
+target/
+bin/
+dependency-reduced-pom.xml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Eclipse Project Files
+
+.classpath
+.project
+.settings/
+
+# IntelliJ IDEA Files
+
+*.iml
+*.ipr
+*.iws
+*.idea
