--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ buildscript {
     ext.mybatis_version = '2.1.3'
     ext.mysql_version = '8.0.19'
     ext.protobuf_version = '3.8.0'
+    ext.protobuf_plugin_version = '0.8.13'
     ext.netty_version = '4.1.42.Final'
+    ext.junit_version = '4.12'
 
     repositories {
         mavenCentral()
