--- a/kulachat-ims/build.gradle
+++ b/kulachat-ims/build.gradle
@@ -1,15 +1,19 @@
 plugins {
-    id 'com.google.protobuf' version '0.8.13'
+    id 'com.google.protobuf' version "$protobuf_plugin_version"
 }
 
 dependencies {
     implementation "com.google.protobuf:protobuf-java:$protobuf_version"
     implementation "io.netty:netty-all:$netty_version"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: "$junit_version"
 }
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 protobuf {
