增加JWT登录验证等

--- a/kulachat-common/build.gradle
+++ b/kulachat-common/build.gradle
@@ -1,3 +1,8 @@
+
+dependencies {
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
