--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
     ext.netty_version = '4.1.42.Final'
     ext.junit_version = '4.12'
     ext.slf4j_version = '1.7.30'
+    ext.aop_version = '2.3.4.RELEASE'
+    ext.jackson_version = '2.9.10.6'
+    ext.redis_version = '2.3.4.RELEASE'
+    ext.jwt_version = '3.10.3'
 
     repositories {
         mavenCentral()
